--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap');
+
 html,
 body {
   height: 100%;
@@ -5,6 +7,7 @@ body {
 }
 
 body {
+  font-family: 'Roboto', sans-serif!important;
   margin: 0;
   padding: 0;
   position: relative;
@@ -57,7 +60,7 @@ img {
   border-color: #ffffff;
   border-radius: 10px;
   color: rgb(0, 0, 0);
-
+  
   font-size: 1rem;
 }
 
