--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,6 +13,9 @@ body {
   position: relative;
 }
 
+/* This is from w3Schools
+https://www.w3schools.com/howto/howto_css_div_full_height.asp
+ */
 .fullHeight {
   height: 100%;
 }
