--- a/public/css/tabTemplate.css
+++ b/public/css/tabTemplate.css
@@ -1,31 +1,34 @@
 /* THESE ARE THE DEFAUL SETTINGS */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap');
 
-html,
-body {
+html,body{
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
+
+
 
 body {
   font-family: 'Roboto', sans-serif!important;
   margin: 0;
   padding: 0;
-  position: relative;
   
 }
 
-/* This is from w3Schools
-https://www.w3schools.com/howto/howto_css_div_full_height.asp
+#mainCon{
+  background-color: #46494C;
+  padding: 40px;
+
+
+
+/* This is from stackoverflow
+https://stackoverflow.com/questions/7527152/div-with-dynamic-min-height-based-on-browser-window-height
  */
-.fullHeight {
+  min-height: 100%;
+  height: auto !important; 
   height: 100%;
+  margin-bottom: -3em;
 }
 
-#mainCon{
-    background-color: #46494C;
-}
 .nav-link {
   color: white;
 }
@@ -39,7 +42,13 @@ https://www.w3schools.com/howto/howto_css_div_full_height.asp
  background-color: black;
  bottom: 0;
  width: 100%;
- position: absolute;
+ position: sticky;
 
+
+ 
+/* This is from stackoverflow
+https://stackoverflow.com/questions/7527152/div-with-dynamic-min-height-based-on-browser-window-height
+ */
+ height: 3em;
 }
 /* END OF DEFAULT SETTINGS */
