--- a/public/css/index.css
+++ b/public/css/index.css
@@ -107,6 +107,7 @@ font-size: 9pt;
 .user-input {
   border: none;
   border-bottom: solid 1px black;
+  width: 100%;
 }
 
 #submit-btn{
@@ -147,6 +148,15 @@ font-size: 9pt;
   flex-direction: column;
   align-items: center;
   padding: 10px;
+}
+
+#login-btn{
+  box-shadow:0px 1px 4px 0px rgba(0, 0, 0, 0.685); 
+  border: none;
+  border-radius: 10px;
+  transition: 0.2s;
+  width: 100%;
+  margin-top: 70px;
 }
 
 
