--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap");
+
 html,
 body {
   height: 100%;
@@ -16,10 +18,6 @@ body {
 }
 
 /* This is from w3Schools https://www.w3schools.com/howto/howto_css_div_full_height.asp */
-
-.fullHeight {
-  height: 100%;
-}
 
 img {
   height: 50px;
