--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,10 +11,7 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  background-image: url("/img/atlas.webp");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: black;
 }
 
 /* This is from w3Schools https://www.w3schools.com/howto/howto_css_div_full_height.asp */
