--- a/public/css/index.css
+++ b/public/css/index.css
@@ -142,7 +142,14 @@ img {
   padding: 10px;
 }
 
-
+#login-btn {
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
+  border: none;
+  border-radius: 10px;
+  transition: 0.2s;
+  width: 100%;
+  margin-top: 70px;
+}
 
 
 
