--- a/src/css/navfooter.css
+++ b/src/css/navfooter.css
@@ -1,5 +1,14 @@
 /* Navbar CSS */
 
+img {
+  width: 100%;
+  height: 75px;
+}
+
+.navbar {
+  height: 100px;
+}
+
 .navbar-brand {
   font-size: 32px;
   margin-left: 10px;
@@ -10,14 +19,9 @@
 }
 
 .nav-link {
+  font-size: 20px;
   text-align: center;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-.navbar-logo {
-  width: 50px;
-  height: 50px;
-  margin-bottom: 4px;
 }
 
 .material-symbols-outlined {
