--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,10 +10,12 @@ body {
   /* display: flex;
   justify-content: space-around; */
   height: 100%;
+  color: white;
 }
 
-.navbar {
-  display: block;
+#uiContainer {
+  padding-top: 100px;
+  height: 100%;
 }
 
 body {
