--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,18 +6,6 @@ body {
   margin: 0;
 }
 
-#root {
-  /* display: flex;
-  justify-content: space-around; */
-  height: 100%;
-  color: black;
-}
-
-#uiContainer {
-  padding-top: 100px;
-  height: 100%;
-}
-
 body {
   font-family: "Roboto", sans-serif !important;
   margin: 0;
@@ -26,11 +14,24 @@ body {
   background-color: black;
 }
 
+h1 {
+  color: white;
+}
+
+p {
+  color: white;
+}
+
 #mainCon {
   display: flex;
   flex-direction: column-reverse;
   align-content: space-around;
   justify-content: space-between;
+}
+
+#uiContainer {
+  padding-top: 100px;
+  height: 100%;
 }
 
 .container {
