--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,7 +11,9 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  background-color: black;
+  background-image: url("../img/gradient.png");
+  background-size: cover;
+  background-position: center;
 }
 
 h1 {
