--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -17,40 +17,22 @@
   width: 100%;
 }
 
-#submit-btn {
-  padding-top: 20px;
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
-  border: none;
-  border-radius: 10px;
-  transition: 0.2s;
-  width: 100%;
-}
-
-#loginContainer {
+.loginContainer {
   height: 100%;
   margin-top: 40px;
-  max-width: 600px;
   border-radius: 10px;
+  display: flex;
+  justify-self: center;
+  justify-content: center;
 }
 
-#loginContainer > p {
+.loginContainer > p {
   padding-top: 20px;
 }
 
 /* Login CSS */
 
-#loginContainer {
-  display: flex;
-  margin: 0;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-}
 
-#login {
-  padding: 0 75px 30px 75px;
-}
 
 #login > input {
   display: flex;
@@ -64,6 +46,10 @@
   border: none;
   border-radius: 10px;
   transition: 0.2s;
-  width: 100%;
+  width: 60%;
   margin-top: 70px;
+}
+
+.login-card {
+  width: 600px;
 }
