--- a/client/src/css/signupDetails.css
+++ b/client/src/css/signupDetails.css
@@ -1,23 +1,3 @@
-/* Signup CSS */
-
-#signup {
-  padding: 0 40px 40px 40px ;
-}
-
-#signup > input {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-}
-
-.user-input {
-  border: none;
-  border-bottom: solid 1px black;
-  width: 100%;
-  justify-content: center;
-}
-
 #submit-btn {
   padding-top: 20px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
@@ -27,25 +7,19 @@
   width: 100%;
 }
 
-#signupContainer {
+.detailsContainer {
   height: 100%;
-  margin-top: 40px;
   max-width: 600px;
   border-radius: 10px;
 }
 
-#signupContainer > p {
-  padding-top: 20px;
-}
 
-
-#login {
+#signupDetails {
   padding: 0 75px 30px 75px;
 }
 
-#login > input {
+#signupDetails > input {
   display: flex;
-  flex-direction: column;
   align-items: center;
   padding: 10px;
 }
@@ -59,6 +33,32 @@
   margin-top: 70px;
 }
 
-#signupLabel {
+.radioInput {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5%;
+  
+}
+
+input[type='radio']{
+  transform: scale(1.25);
+
+}
+
+#detailsLabel{
   font-size: 30pt;
+  /* padding: 20px; */
+}
+
+#activityLevel {
+  margin: 25px 0 20px 0;
+  padding: 10px;
+  background-color: white;
+}
+
+#fitnessGoals {
+  margin: 5px 0 20px 0;
+  padding: 10px;
+  background-color: white;
 }
