--- a/client/src/css/diet.css
+++ b/client/src/css/diet.css
@@ -4,13 +4,12 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow: scroll;
 }
 
 body {
 
   font-family: "Roboto", sans-serif !important;
-  /* margin: 0;
-  padding: 0; */
   /* position: relative; */
   background-image: url("../img/gradient.png");
   background-size: cover;
@@ -39,11 +38,9 @@ p {
   background-color: inherit;
 }
 
-.homeContainer {
-  height: 100%;
-  margin-top: 40px;
-  max-width: 1000px;
-  padding-top: 160px;
+.mealCard {
+  padding: 0 10%;
   border-radius: 10px;
 }
+
 
