--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@600&display=swap");
-
 html,
 body {
   height: 100%;
@@ -8,13 +6,10 @@ body {
 
 body {
   font-family: "Roboto", sans-serif !important;
-  /* margin: 0;
-  padding: 0; */
+  /* margin: 0; */
+  /* padding: 0; */
   /* position: relative; */
-  background-image: url("../img/gradient.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: black;
 }
 
 h1 {
