Updated card body styling for Diet.jsx in diet.css, added step property to form in SignUpDetails.jsx

--- a/client/src/css/diet.css
+++ b/client/src/css/diet.css
@@ -39,7 +39,11 @@ p {
 }
 
 .mealCard {
-  /* padding: 0 10%; */
   border-radius: 10px;
-  width: 400px;
+  margin: 0 10px 20px 10px;
+  padding-bottom: 30px;
+}
+
+.diet-card-body {
+  padding: 50px;
 }
