--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -6,36 +6,22 @@ body {
 
 body {
   font-family: "Roboto", sans-serif !important;
-  /* margin: 0; */
-  /* padding: 0; */
-  /* position: relative; */
   background-color: black;
 }
 
-h1 {
-  color: black;
+h1, p {
+  color: white;
 }
 
-p {
-  color: black;
-}
-
-.container {
-  position: relative;
-  padding-top: 160px;
+.card {
   height: 100%;
-  max-width: 1000px;
-  border-radius: 10px;
+  display: flex;
+  width: 1000px;
+  margin-top: 160px;
+  background-color: #2b2b2b;
 }
 
 .container-fluid {
   /* Sets dropdown of navbar to be same colour as actual navbar */
   background-color: inherit;
-}
-
-.homeContainer {
-  height: 100%;
-  max-width: 1000px;
-  padding-top: 160px;
-  border-radius: 10px;
 }
