--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -48,7 +48,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #ffffff;
+  color: white !important;
   font-size: 20px;
   transition: background-color 0.3s ease;
 }
