--- a/client/src/css/coach.css
+++ b/client/src/css/coach.css
@@ -1,3 +1,13 @@
+body {
+  overflow: auto;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .coach {
   top: 0;
   bottom: 0;
@@ -16,6 +26,8 @@
 .chatMessageContainer {
   display: flex;
   align-items: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .avatar {
@@ -38,7 +50,7 @@
 .textInputContainer {
   background-color: #d4d4d4;
   padding: 12px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
