--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -7,10 +7,11 @@ body {
 body {
   font-family: "Roboto", sans-serif !important;
   background-color: black;
+  overflow: auto;
 }
 
 h1, h3, h5, label, p {
-  color: white;
+  color: black;
 }
 
 .card {
@@ -18,5 +19,8 @@ h1, h3, h5, label, p {
   display: flex;
   width: 1000px;
   margin-top: 160px;
-  background-color: #2b2b2b;
+  text-align: center;
+  background-color: #d4d4d4;
 }
+
+
