--- a/client/src/css/leaderboard.module.css
+++ b/client/src/css/leaderboard.module.css
@@ -1,8 +1,3 @@
-h1 {
-  text-align: center;
-  margin-top: 20px;
-}
-
 tr {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -36,9 +31,30 @@ td img {
   margin-right: 10px;
 }
 
-.ranksContainer {
+.cardWrapper {
   height: 100%;
   max-width: 1000px;
-  padding-top: 160px;
   border-radius: 10px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 160px;
+}
+
+.ranksCard {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+  background-color: #d4d4d4;
+}
+
+.title {
+  text-align: center;
+  margin-top: 20px;
+  font-weight: bold;
+  color: black;
 }
