Signup files now follow module.css convention

--- a/client/src/css/login.module.css
+++ b/client/src/css/login.module.css
@@ -1,8 +1,8 @@
-.login {
+#login {
   padding: 40px;
 }
 
-.login > input {
+#login > input {
   display: flex;
   flex-direction: column;
   align-items: center;
