--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -1,5 +1,3 @@
-/* Signup CSS */
-
 #signup {
   padding: 0 40px 40px 40px;
 }
@@ -11,20 +9,29 @@
   padding: 10px;
 }
 
-.user-input {
-  border: none;
-  border-bottom: solid 1px black;
-  width: 100%;
-  justify-content: center;
+#signupHeader {
+  margin-top: 30px;
+  font-size: 30pt;
 }
 
-#submit-btn {
+#signupLabel {
+  font-size: 30pt;
+}
+
+#submitBtn {
   padding-top: 20px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
   border: none;
   border-radius: 10px;
   transition: 0.2s;
   width: 60%;
+}
+
+.userInput {
+  border: none;
+  border-bottom: solid 1px black;
+  width: 100%;
+  justify-content: center;
 }
 
 .signupContainer {
@@ -35,15 +42,7 @@
   justify-content: center;
 }
 
-.signup-card {
+.signupCard {
   width: 600px;
-}
-
-#signupHeader {
-  margin-top: 30px;
-  font-size: 30pt;
-}
-
-#signupLabel {
-  font-size: 30pt;
+  border-radius: 10px;
 }
