--- a/client/src/css/coach.module.css
+++ b/client/src/css/coach.module.css
@@ -19,6 +19,7 @@ ul {
 .chatLogContainer {
   padding: 24px;
   margin-top: 100px;
+  margin-bottom: 50px;
   overflow-y: auto;
   color: white;
 }
@@ -28,6 +29,7 @@ ul {
   align-items: center;
   margin-top: 16px;
   margin-bottom: 16px;
+  overflow: scroll;
 }
 
 .userAvatar {
@@ -43,8 +45,8 @@ ul {
 }
 
 .message {
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 0 30px;
+
 }
 
 .textInputContainer {
