Added title class to h1 elements on Diet and Fitness pages to be consistent with styling on Leaderboard page

--- a/client/src/css/fitness.css
+++ b/client/src/css/fitness.css
@@ -28,3 +28,10 @@ body {
 .fitness-card-body {
   padding: 0 100px;
 }
+
+.title {
+  text-align: center;
+  margin-top: 20px;
+  font-weight: bold;
+  color: black;
+}
