Signup Details now follow module.css convention

--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -24,7 +24,8 @@
   border: none;
   border-radius: 10px;
   transition: 0.2s;
-  width: 60%;
+  width: 100%;
+  justify-content: center;
 }
 
 .userInput {
