--- a/client/src/css/login.module.css
+++ b/client/src/css/login.module.css
@@ -28,12 +28,13 @@
 }
 
 .loginBtn {
+  padding-top: 20px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
   border: none;
   border-radius: 10px;
   transition: 0.2s;
-  width: 60%;
-  margin-top: 70px;
+  width: 100%;
+  justify-content: center;
 }
 
 .loginCard {
