--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -29,10 +29,15 @@
 }
 
 .userInput {
-  border: none;
-  border-bottom: solid 1px black;
+  border: 2px solid #c0c0c0;
   width: 100%;
   justify-content: center;
+  border-radius: 10px;
+  /* transition: 0.2s; */
+}
+
+.userInput:focus {
+  outline: solid rgb(129, 126, 126) 2px;
 }
 
 .signupContainer {
@@ -46,4 +51,13 @@
 .signupCard {
   width: 600px;
   border-radius: 10px;
+}
+
+.loginRedirect{
+  color: black;
+}
+
+.loginLink {
+ text-decoration: none;
+ color: rgb(69, 182, 148);
 }
