Changes to css in login and signup

--- a/client/src/css/login.module.css
+++ b/client/src/css/login.module.css
@@ -1,19 +1,24 @@
 #login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding-bottom: 40px;
 }
 
 #login > input {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center;
+  justify-content: center; */
   padding: 10px;
 }
 
 .userInput {
   border: 2px solid #c0c0c0;
-  width: 100%;
-  justify-content: center;
+  width: 300px;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 
 .userInput:focus {
@@ -33,13 +38,16 @@
 }
 
 .loginBtn {
-  padding-top: 20px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
   border: none;
   border-radius: 10px;
   transition: 0.2s;
-  width: 100%;
-  justify-content: center;
+  width: 300px;
+  background-color: rgb(92, 208, 216);
+}
+
+.loginBtn:hover {
+  background-color: hsl(184, 62%, 73%);
 }
 
 .loginCard {
