--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=ProximaNova:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Exo&family=Inter&display=swap");
 
 html,
 body {
   height: 100%;
   margin: 0;
-  font-family: ProximaNova, Arial, sans-serif;
+  font-family: "Exo", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .indexBody {
