--- a/client/src/css/navfooter.css
+++ b/client/src/css/navfooter.css
@@ -29,6 +29,10 @@ img {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+.nav-dropdown{
+  background-color: inherit;
+}
+
 .material-symbols-outlined {
   display: block !important;
 }
