10px border-radius shown now on remaining cards

--- a/client/src/css/calendar.module.css
+++ b/client/src/css/calendar.module.css
@@ -12,6 +12,11 @@ h4 {
 }
 
 .calendarCard {
+  margin-bottom: 50px;
+  border-radius: 10px;
+}
+
+.calendarContainer {
   height: 100%;
   width: 100%;
   max-width: 1000px;
