--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -31,6 +31,15 @@ h5, label {
   margin: auto;
 }
 
+.profileCard {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 40px;
+  background-color: #d4d4d4;
+}
+
 .profileImage {
   position: relative;
   width: 150px;
