--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=ProximaNova:wght@400;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=ProximaNova:wght@400;700&display=swap"); */
+/* commented out because was throwing console errors */
 
 html,
 body {
