--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -32,8 +32,10 @@ body {
 }
 
 .indexImage {
-  height: 500px;
-  width: 750px;
+  height: 100%;
+  width: 100%;
+  max-height: 500px;
+  max-width: 750px;
 }
 
 .indexTitle {
