--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
 
-html,
-body {
+.indexBody {
   height: 100%;
   margin: 0;
   font-family: "Varela Round", sans-serif;
@@ -9,6 +8,8 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  position: fixed;
+  overflow: scroll;
 }
 
 .indexBtn {
@@ -23,13 +24,13 @@ body {
 
 .indexCard {
   width: 100%;
-  margin-top: 210px;
+  margin-top: 100px;
 }
 
 .indexImage {
   height: 100%;
   width: 100%;
-  margin-top: 210px;
+  margin-top: 100px;
 }
 
 .indexTitle {
