--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
 html,
 body {
-  /* height: 100%; */
+  height: 100%;
   margin: 0;
+  font-family: "Varela Round", sans-serif;
 }
 
 body {
@@ -9,7 +12,12 @@ body {
   overflow: auto;
 }
 
-h1, h3, h4, h5, label, p {
+h1,
+h3,
+h4,
+h5,
+label,
+p {
   color: white;
   text-align: center;
   margin-top: 20px;
@@ -23,5 +31,3 @@ h1, h3, h4, h5, label, p {
   text-align: center;
   background-color: #d4d4d4;
 }
-
-
