Adjusted card max-width in main.css

--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -1,4 +1,4 @@
-.signupBody {
+/* .signupBody {
   height: 100%;
   margin: 0;
   font-family: "Varela Round", sans-serif;
@@ -6,7 +6,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
 
 #signup {
   padding: 0 40px 40px 40px;
