--- a/client/src/css/index.module.css
+++ b/client/src/css/index.module.css
@@ -1,5 +1,6 @@
 .indexBody {
   height: 100%;
+  width: 100%;
   margin: 0;
   background-image: url("../img/abstract.png");
   background-size: cover;
