--- a/client/src/css/password.module.css
+++ b/client/src/css/password.module.css
@@ -1,4 +1,4 @@
-.loginBody {
+.passwordBody {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -11,7 +11,7 @@
   overflow: scroll;
 }
 
-#login {
+#password {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -20,27 +20,27 @@
   padding: 0px 40px 40px 40px;
 }
 
-#login > input {
+#password > input {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px;
 }
 
-#loginHeader {
+#passwordHeader {
   color: white;
   margin-top: 30px;
   font-size: 30pt;
   font-weight: bold;
 }
 
-.loginCard {
+.passwordCard {
   max-width: 600px;
   border-radius: 10px;
   text-align: center;
 }
 
-.loginBtn {
+.passwordBtn {
   padding-top: 20px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.685);
   border: none;
@@ -51,7 +51,7 @@
   background-color: rgb(92, 208, 216);
 }
 
-.loginBtn:hover {
+.passwordBtn:hover {
   background-color: hsl(184, 62%, 73%);
 }
 
