--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -17,7 +17,12 @@
   border-radius: 10px;
   text-align: center;
   margin-bottom: 40px;
-  background-color: #d4d4d4;
+}
+
+.homeHeader {
+  text-align: center;
+  color: white;
+  margin-bottom: 20px;
 }
 
 .progressHeader {
@@ -55,9 +60,4 @@
 .step.completed {
   background-color: #f0bb31;
   color: white;
-}
-
-.title {
-  text-align: center;
-  color: black;
 }
