--- a/client/src/css/signup.module.css
+++ b/client/src/css/signup.module.css
@@ -47,6 +47,7 @@
   width: 300px;
   justify-content: center;
   background-color: rgb(92, 208, 216);
+  margin-top: 12px;
 }
 
 #submitBtn:hover {
@@ -73,6 +74,7 @@
   width: 300px;
   justify-content: center;
   border-radius: 10px;
+  margin: 12px;
 }
 
 .userInput:focus {
