--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
 html,
 body {
   height: 100%;
   margin: 0;
-  font-family: "Varela Round", sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 body {
