--- a/client/src/css/profile.module.css
+++ b/client/src/css/profile.module.css
@@ -1,5 +1,12 @@
-h5, label {
-  color: black;
+
+h1 {
+  color: white;
+}
+
+.profileBody {
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 .btn {
@@ -11,33 +18,34 @@ h5, label {
   border-color: green;
 }
 
-.card {
+.chatCard {
+  max-width: 1000px;
   border-radius: 10px;
+  text-align: center;
+  background-color: #2b2b2b;
+}
+
+.formLabel {
+  color: black;
 }
 
 .imgProfile {
   margin-top: 10px;
 }
 
-.profileContainer {
-  height: 100%;
-  max-width: 1000px;
+.profileCard {
+  max-width: 500px;
   border-radius: 10px;
-  display: flex;
   text-align: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
+  background-color: #2b2b2b;
 }
 
-.profileCard {
-  height: 100%;
-  width: 100%;
-  border-radius: 10px;
-  text-align: center;
-  margin-bottom: 40px;
-  background-color: #d4d4d4;
+.profileHeader {
+  color: #7c7c7c;
+}
+
+.profileItem {
+  color: white;
 }
 
 .profileImage {
@@ -79,6 +87,9 @@ h5, label {
   display: none;
 }
 
-.profileTitle {
-  color: black;
+@media (max-width: 767px) {
+  html,
+  body {
+    height: auto;
+  }
 }
